# windows-qr-scanner-zxing

./: CMakeLists.txt  CMakePresets.json  README.md  config.ini  main.cpp  设计指南.md
